<resources>

    <!-- Tela principal (MainActivity) -->
    <string name="app_name">CalculadoraParaIMC</string>
    <string name="btnMain"> CALCULADORA IMC </string>
    <string name="fecap"> FECAP - 2025 GUILHERME FOGOLIN </string>
    <string name="descricao_img_main"> Calculadora de IMC</string>

    <!-- Tela para calculadora (CalculoIMCActivity) -->
    <string name="descricao_img_balanca"> Imagem de uma balança </string>
    <string name="calcularHint1"> Digite seu peso (em kg) </string>
    <string name="calcularHint2"> Digite sua altura (em m) </string>
    <string name="btn_Calcular"> CALCULAR </string>"
    <string name="btn_Limpar"> LIMPAR </string>"
    <string name="btn_Fechar_calculadora"> FECHAR </string>

    <!-- Itens comuns para telas de resultados -->
    <string name="peso_Hint"> </string>
    <string name="altura_Hint"> </string>
    <string name="imc_Hint"> </string>
    <string name="btn_Fechar"> FECHAR </string>

    <!-- Tela para Abaixo do Peso (AbaixoDoPesoActivity) -->
    <string name="descricao_img_abaixo"> Pessoa magra </string>
    <string name="classificacao_abaixoHint"> Resultado: abaixo do peso </string>
    <string name="frase_abaixoHint"> Cuide da sua nutrição! 🍉 </string>

    <!-- Tela para Peso normal (PesoNormalActivity) -->
    <string name="descricao_img_normal"> Pessoa normal </string>
    <string name="classificacao_normalHint"> Resultado: peso normal </string>
    <string name="frase_normalHint"> Ótimo trabalho! 😎 </string>

    <!-- Tela para Sobrepeso (SobrepesoActivity) -->
    <string name="descricao_img_sobrepeso"> Pessoa sobrepeso </string>
    <string name="classificacao_sobrepesoHint"> Resultado: sobrepeso </string>
    <string name="frase_sobrepesoHint"> Vamos reverter? 💪 </string>

    <!-- Tela para Obesidade Grau I (Obesidade1Activity) -->
    <string name="descricao_img_obs1"> Pessoa obesa1 </string>
    <string name="classificacao_obs1Hint"> Resultado: obesidade I </string>
    <string name="frase_obs1Hint"> Saúde é prioridade! 👩‍⚕️ </string>

    <!-- Tela para Obesidade Grau II (Obesidade2Activity) -->
    <string name="descricao_img_obs2"> Pessoa obesa2 </string>
    <string name="classificacao_obs2Hint"> Resultado: obesidade II </string>
    <string name="frase_obs2Hint"> Reverter é essencial! 🏃 </string>
</resources>


    <!-- Abaixo do peso (AbaixoDoPesoActivity)
    “Cuide da sua nutrição! Alimentação equilibrada e acompanhamento profissional podem fazer a diferença.”

    Peso normal (PesoNormalActivity)
    “Ótimo trabalho! Continue mantendo hábitos saudáveis para seu bem-estar.”

    Sobrepeso (SobrepesoActivity)
    “Pequenas mudanças no dia a dia fazem a diferença! Que tal incluir mais movimento e escolhas equilibradas?”

    Obesidade grau 1 (Obesidade1Activity)
    “Seu bem-estar é prioridade! Um passo de cada vez pode levar a grandes mudanças.”

    Obesidade grau 2 (Obesidade2Activity)
    “Seu corpo merece cuidado! Busque orientação e dê o primeiro passo para uma vida mais saudável.”

    Obesidade grau 3 (Obesidade3Activity)
    “Você tem o poder de transformar sua saúde! Conte com apoio profissional e faça escolhas positivas.” -->